--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.10",
     "@ai-sdk/openai": "^0.0.9",
+    "@marsidev/react-turnstile": "^0.6.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
