--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ai-sdk/anthropic": "^0.0.10",
     "@ai-sdk/openai": "^0.0.9",
     "@marsidev/react-turnstile": "^0.6.0",
+    "@next/third-parties": "^14.2.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -26,6 +27,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "^0.0.17",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.30.1",
     "@vercel/analytics": "^1.2.2",
@@ -52,6 +54,7 @@
     "react-textarea-autosize": "^8.5.3",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "resend": "^3.2.0",
     "sonner": "^1.4.41",
     "usehooks-ts": "^2.16.0",
     "zod": "^3.23.8"
