chore: update env examples

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,22 @@
-# 
-ANTHROPIC_API_KEY=XXXXXXXX
-
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
-AUTH_SECRET=XXXXXXXX
-AUTH_URL="https://example.com"
+AUTH_SECRET=
+# Set this env in production environment
+AUTH_URL=
 
-# Instructions to create upstash database here: https://upstash.com/docs/redis/overall/getstarted, and paste the envs below
-UPSTASH_REDIS_REST_URL=xxxxx
-UPSTASH_REDIS_REST_TOKEN=xxxxx
+# Instructions to create kv database here: https://vercel.com/docs/storage/vercel-kv/quickstart and 
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
+
+# Follow steps in https://docs.anthropic.com/claude/docs/getting-access-to-claude and get the api key, then paste it below
+ANTHROPIC_API_KEY=
+
+# Instructions to get Turnstile keys here: https://developers.cloudflare.com/turnstile/get-started/
+CAPTCHA_SECRET_KEY=
+NEXT_PUBLIC_ENV_CAPTCHA_SITE_KEY=
+
+# For email verification usage
+# Visit https://resend.com/api-keys and get the api key
+RESEND_API_KEY=
+
+# If set to `developemt`, the sign-in captcha will be bypassed
+ENVIRONMENT=
