feat: add basic pwa support

--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,4 @@ NEXT_PUBLIC_ENV_CAPTCHA_SITE_KEY=
 RESEND_API_KEY=
 
 # If set to `developemt`, the sign-in captcha will be bypassed
-ENVIRONMENT=
+NODE_ENV=
