--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "openai": "^4.44.0",
     "react": "^18.3.1",
